# bright-chatbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: cd-deploy-chatbot-prod.yml  cd-deploy-chatbot-stg.yml  ci-display-changeset-prod.yml  ci-display-changeset-stg  ci-display-changeset-stg.yml
bright_chatbot/backends/: __init__.py  base_backend.py
bright_chatbot/client/: __init__.py  chat.py  errors.py
bright_chatbot/configs/: __init__.py  _settings.py  base.py  project_settings.py  settings.py
bright_chatbot/models/: __init__.py  chat_history.py  errors.py  message.py  outputs.py  sessions.py  user.py
bright_chatbot/providers/: base_provider.py
bright_chatbot/services/: __init__.py  _base_handler.py  chat_handler.py  commands_handler.py  image_handler.py
bright_chatbot/tests/: base.py
bright_chatbot/utils/: exceptions.py  loggers.py  utils.py
deploy/chatbot/: template.yml
deploy/cloudformation/: README.md  template.yml
deploy/web_backend/: .gitignore  README.md  template.yml
openai_mobile/: requirements.txt
openai_mobile/backends/: base_backend.py
openai_mobile/client/: chat.py  errors.py  handler.py
openai_mobile/configs/: __init__.py  base.py  settings.py
openai_mobile/models/: .gitignore  __init__.py  chat_history.py  errors.py  message.py  outputs.py  user.py
openai_mobile/providers/: __init__.py  base_provider.py
openai_mobile/services/: _base_handler.py  chat_handler.py  commands_handler.py  image_handler.py
openai_mobile/tests/: test_img_handler.py
(+53 files in other folders)
