[metadata]
name = bright_chatbot
summary = Python Application to chat with OpenAIs models such as ChatGPT and Dall-E using Whatsapp or other mobile telecom providers.
author = josersanvil
author_email = josersanvil@gmail.com
url = https://github.com/Josersanvil/openai-mobile-chatbot
version = attr: bright_chatbot.__version__
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
   LICENSE
